fix: dark mode in the hightlight

--- a/src/scss/generics/_reset.scss
+++ b/src/scss/generics/_reset.scss
@@ -142,6 +142,32 @@ nav :not(ul) {
 }
 
 .prose {
+  // hello
+//   --sh-class: hsl(214deg 55% 40%);
+// --sh-identifier: hsl(213deg 20% 26%);
+// --sh-sign: hsl(210deg 12% 59%);
+// --sh-property: hsl(213deg 94% 35%);
+// --sh-entity: hsl(178deg 62% 37%);
+// --sh-jsxliterals: hsl(238deg 55% 60%);
+// --sh-string: hsl(175deg 100% 33%);
+// --sh-keyword: hsl(4deg 87% 68%);
+// --sh-comment: hsl(0deg 6% 61%);
+
+
+  // hello
+  --sh-class: var(--primary-11);
+--sh-identifier: var(--green-11);
+--sh-sign: var(--slate-11);
+--sh-property: var(--primary-10);
+--sh-entity: var(--orange-11);
+--sh-jsxliterals: var(--orange-11);
+--sh-string: var(--green-10);
+--sh-keyword: var(--red-11);
+--sh-comment: var(--slate-9);
+
+
+
+
   & :is(ul, ol) > * + * {
     margin-top: var(--space-2xs);
   }
