--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -87,17 +87,8 @@
   --green-11: hsl(153deg 67% 28.5%);
   --green-12: hsl(155deg 40% 14%);
 
-  // Rehype Color
 
-  --sh-class: hsl(214deg 55% 40%);
-  --sh-identifier: hsl(213deg 20% 26%);
-  --sh-sign: hsl(210deg 12% 59%);
-  --sh-property: hsl(213deg 94% 35%);
-  --sh-entity: hsl(178deg 62% 37%);
-  --sh-jsxliterals: hsl(238deg 55% 60%);
-  --sh-string: hsl(175deg 100% 33%);
-  --sh-keyword: hsl(4deg 87% 68%);
-  --sh-comment: hsl(0deg 6% 61%);
+
 }
 
 html.dark {
@@ -186,4 +177,12 @@ html.dark {
   --orange-10: hsl(24deg 100% 58.5%);
   --orange-11: hsl(24deg 100% 62.2%);
   --orange-12: hsl(24deg 97% 93.2%);
+
+
+
+
 }
+
+
+
+
